examples/invalid/semantics/set_immutable.aru
module examples.invalid.semantics.setImmutable

func main() {
    name = "Bruno"

    // expected: semantic error; `name` is immutable.
    set name = "Ana"
}
